--- a/index.html
+++ b/index.html
@@ -54,11 +54,11 @@
                     <li><a href="#">Главная</a></li>
                     <li><a href="#">Путешествия</a>
                         <ul class="submenu">
-                            <li><a href="#"></a>Путешествие 1</li>
-                            <li><a href="#"></a>Путешествие 2</li>
-                            <li><a href="#"></a>Путешествие 3</li>
-                            <li><a href="#"></a>Путешествие 4</li>
-                            <li><a href="#"></a>Путешествие 5</li>
+                            <li><a href="#">Путешествие 1</a></li>
+                            <li><a href="#">Путешествие 2</a></li>
+                            <li><a href="#">Путешествие 3</a></li>
+                            <li><a href="#">Путешествие 4</a></li>
+                            <li><a href="#">Путешествие 5</a></li>
                         </ul>
                     </li>
                     <li><a href="#">Услуги</a></li>
@@ -68,6 +68,8 @@
                     <li><a href="#">Контакты</a></li>
                 </ul>
             </div>
+            <!--END top-menu-->
+
             <div class="info-block">
                 <p>Информация</p>
                 <p>Lorem ipsum dolor sit amet</p>
@@ -112,6 +114,6 @@
     <div class="footer">
         <p>Copyright &copy; asia-holidays.com. 2010</p>
     </div>
-        <!--END footer-->
+    <!--END footer-->
 </body>
 </html>
